src/test/deca/context/invalid/homemade/tests/test328_affectation_sous_type/test328_affectation_sous_type9.deca
// test invalide de la règle 3.28

{
    boolean a = False;
}
